fix Gilroy spacing (maybe?)

--- a/web-app/static/css/app.css
+++ b/web-app/static/css/app.css
@@ -174,6 +174,7 @@ html, body {
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: Gilroy-ExtraBold, sans-serif;
+	letter-spacing: 0px !important;
 	font-weight: 700;
 }
 
@@ -258,6 +259,7 @@ td.left, th.left {
 table.today-schedule tr td.signifier {
 	font-weight: 700;
 	font-family: Gilroy-ExtraBold, sans-serif;
+	letter-spacing: 0px !important;
 }
 
 /*table.today-schedule tr td.center {*/
@@ -338,12 +340,14 @@ div.mission-control-part.current-status div.mission-control-status-container div
 div.mission-control-part.current-status div.mission-control-status-container div.mission-control-status-field.time {
 	font-size: 25px;
 	font-family: Gilroy-ExtraBold, sans-serif;
+	letter-spacing: 0px !important;
 	font-weight: 500;
 }
 
 div.mission-control-part.current-status div.mission-control-status-container div.mission-control-status-field.event {
 	/*font-size: 20px;*/
-	/*font-family: Gilroy-ExtraBold, sans-serif;*/
+	/*font-family: Gilroy-ExtraBold, sans-serif;
+	letter-spacing: 0px !important;*/
 	font-weight: 700;
 }
 
@@ -388,6 +392,7 @@ div.loading-overlay.hidden {
 div.loading-overlay div.loading-text {
 	color: #fff;
 	font-family: Gilroy-ExtraBold, sans-serif;
+	letter-spacing: 0px !important;
 	font-weight: 700;
 	font-size: calc(10.5 * var(--vw));
 
@@ -553,6 +558,7 @@ table.class-entry-table {
 
 table.class-entry-table tr th {
 	font-family: Gilroy-ExtraBold, sans-serif;
+	letter-spacing: 0px !important;
 	font-weight: 500;
 }
 
@@ -573,6 +579,7 @@ table.class-entry-table tr td:first-child, table.class-entry-table tr th:first-c
 
 table.class-entry-table tr td.signifier {
 	font-family: Gilroy-ExtraBold, sans-serif;
+	letter-spacing: 0px !important;
 	font-weight: 700;
 }
 
@@ -590,6 +597,7 @@ div.grade-select-container {
 	--webkit-tap-highlight-color: transparent;
 
 	font-family: Gilroy-ExtraBold, sans-serif;
+	letter-spacing: 0px !important;
 	font-weight: 700;
 	font-size: 20px;
 
